# tree-sitter-ord

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  grammar.js  package.json  pyproject.toml  tree-sitter.json
examples/: ord1_test.ord
src/: grammar.json  parser.c  scanner.c
