[package]
name = "tree-sitter-ord"
description = "Ord grammar for tree-sitter"
version = "0.1.0"
authors = [
  "Dominik Schwimmbeck <dominik.schwimmbeck@tu-berlin.de>",
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "python", "ord"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/schwimmbeck/tree-sitter-ord"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
